--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Dimension</h1>
-								<p>Online Geld verdienen - So geht`s</p>
+								<p>Du willst online Geld verdienen - So geht`s</p>
 							</div>
 						</div>
 						<nav>
@@ -46,8 +46,8 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Mein Werdegang im Affiliate Marketing begann aus Neugier und dem Wunsch nach finanzieller Freiheit. Trotz anfänglicher Unkenntnis und Rückschlägen trieb mich die Aussicht auf Erfolg und Unabhängigkeit an. By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>Mit Hingabe und kontinuierlichem Lernen entwickelte ich meine Fähigkeiten im Aufbau von Beziehungen, der Erstellung überzeugender Inhalte und der Optimierung meiner Marketingstrategien. Heute bin ich stolz darauf, ein Talent im Affiliate Marketing zu sein und möchte andere dazu ermutigen, denselben Weg zu gehen, da dieser Bereich immer Raum für aufstrebende Talente bietet.</p>
 							</article>
 
 						<!-- Work -->
