--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>Mit diesem Kurs öffne ich Ihnen die Tür zu einem aufregenden Bereich des Online-Marketings.</p>
+								<p>. Sie erhalten nicht nur Expertenwissen, praxisnahe Anleitungen und effektive Marketingstrategien, sondern auch die Inspiration und Unterstützung, um im Affiliate Marketing erfolgreich zu sein. Knüpfen Sie wertvolle Kontakte und nutzen Sie unsere Support- und Ressourcen. Machen Sie den ersten Schritt auf Ihrem Weg zu finanzieller Unabhängigkeit und einer erfüllten Karriere im Affiliate Marketing.
+								Starten Sie noch heute Ihre Reise zum Affiliate Marketing Erfolg indem sie diesen Kurs um nur 150€ kaufen
+								</p>
 							</article>
 
 						<!-- About -->
