--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Mein Name ist Robert Ninic, ich bin 19 Jahre alt und in Bad Gastein aufgewachsen. Seit meinem 17. Lebensjahr habe ich Erfahrungen im Bereich finanzieller Unabhängigkeit und Erfolg gesammelt. Mit einem tiefen Wissen und bewährten Strategien im Gepäck, freue ich mich, mein Know-how in einem Kurs weiterzugeben und anderen zu helfen, ihre Ziele ebenfalls zu erreichen.</p>
 							</article>
 
 						<!-- Contact -->
