--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
+								<h1>Affiliate Marketing</h1>
 								<p>Du willst online Geld verdienen - So geht`s</p>
 							</div>
 						</div>
