--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Mit diesem Kurs öffne ich Ihnen die Tür zu einem aufregenden Bereich des Online-Marketings.</p>
-								<p>. Sie erhalten nicht nur Expertenwissen, praxisnahe Anleitungen und effektive Marketingstrategien, sondern auch die Inspiration und Unterstützung, um im Affiliate Marketing erfolgreich zu sein. Knüpfen Sie wertvolle Kontakte und nutzen Sie unsere Support- und Ressourcen. Machen Sie den ersten Schritt auf Ihrem Weg zu finanzieller Unabhängigkeit und einer erfüllten Karriere im Affiliate Marketing.
+								<p>Sie erhalten nicht nur Expertenwissen, praxisnahe Anleitungen und effektive Marketingstrategien, sondern auch die Inspiration und Unterstützung, um im Affiliate Marketing erfolgreich zu sein. Knüpfen Sie wertvolle Kontakte und nutzen Sie unsere Support- und Ressourcen. Machen Sie den ersten Schritt auf Ihrem Weg zu finanzieller Unabhängigkeit und einer erfüllten Karriere im Affiliate Marketing.
 								Starten Sie noch heute Ihre Reise zum Affiliate Marketing Erfolg indem sie diesen Kurs um nur 150€ kaufen
 								</p>
 							</article>
