--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="mailto:ninic.robert@johak.at" class="icon fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://www.facebook.com/people/Robert-Ninic/pfbid02hQ8KyG8U1L6ARfNq8EQvA27uKZJN7aSsK4eBdRTTHRVdyNAvbhU5GaDBiPMZegpHl/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.instagram.com/affiliate.coach0/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/robi173/dimension/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
