--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/Geld.jpg" alt="" /></span>
 								<p>Mein Werdegang im Affiliate Marketing begann aus Neugier und dem Wunsch nach finanzieller Freiheit. Trotz anfänglicher Unkenntnis und Rückschlägen trieb mich die Aussicht auf Erfolg und Unabhängigkeit an. Übrigens, hier ein Einblick in <a href="#work">meine Arbeit</a>.</p>
 								<p>Mit Hingabe und kontinuierlichem Lernen entwickelte ich meine Fähigkeiten im Aufbau von Beziehungen, der Erstellung überzeugender Inhalte und der Optimierung meiner Marketingstrategien. Heute bin ich stolz darauf, ein Talent im Affiliate Marketing zu sein und möchte andere dazu ermutigen, denselben Weg zu gehen, da dieser Bereich immer Raum für aufstrebende Talente bietet.</p>
 							</article>
