--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/self.jpg" alt="" /></span>
+								<span class="image main"><img src="images/self1.jpg" alt="" /></span>
 								<p>Mein Name ist Robert Ninic, ich bin 19 Jahre alt und in Bad Gastein aufgewachsen. Seit meinem 17. Lebensjahr habe ich Erfahrungen im Bereich finanzieller Unabhängigkeit und Erfolg gesammelt. Mit einem tiefen Wissen und bewährten Strategien im Gepäck, freue ich mich, mein Know-how in einem Kurs weiterzugeben und anderen zu helfen, ihre Ziele ebenfalls zu erreichen.</p>
 							</article>
 
